--- a/app/views/punches/_punch.html.erb
+++ b/app/views/punches/_punch.html.erb
@@ -2,8 +2,11 @@
 	<p>
 		<%= highlight(punch).html_safe %>
 	</p>
-	<div class="date"><%= punch.created_at.strftime("%a, %B %d, %Y") %></div>
+	<div class="date">Started working <%= punch.start_time %><br /><%= punch.created_at.strftime("%a, %B %d, %Y") %></div>
 	<div class="punch_control">
+
+        <%= link_to "Stop working", "punches/#{punch.id}/stop", :remote => true if punch.start_time? %>
+
     	<%= link_to image_tag("edit.png"), edit_punch_path(punch) %> 
     	<%= link_to image_tag("delete.png"), punch, :confirm => 'Are you sure?', :method => :delete %>
     </div>
