--- a/app/views/punches/start.js.erb
+++ b/app/views/punches/start.js.erb
@@ -1,2 +1,3 @@
 $("#<%= dom_id(@punch) %> .punch_control").prepend("<%= escape_javascript(link_to "Stop working", stop_path(@punch), :class => "stop-link", :remote => true) %>");
 $("#<%= dom_id(@punch) %> .start-link").remove();
+$("#<%= dom_id(@punch) %> .punch_control").prepend("<%= escape_javascript(content_tag (:div, "Started working at #{@punch.start_time.strftime('%B %d %Y - %Hh%Mm%S')}", :class => "start-time")) %>");
