--- a/app/views/punches/stop.js.erb
+++ b/app/views/punches/stop.js.erb
@@ -2,3 +2,4 @@ $("#<%= dom_id(@punch) %> .punch_control").prepend("<%= escape_javascript(link_t
 $("#<%= dom_id(@punch) %> .stop-link").remove();
 $("#<%= dom_id(@punch) %> .duration-time").remove();
 $("#<%= dom_id(@punch) %> .date").append("<%= escape_javascript(content_tag(:span, 'Worked for '+@punch.duration_in_minutes.to_s+' minutes', :class => 'duration-time')) %>");
+$("#<%= dom_id(@punch) %> .start_time").remove();
