Improvements on punch partial design for index

--- a/app/views/punches/_punch.html.erb
+++ b/app/views/punches/_punch.html.erb
@@ -1,9 +1,7 @@
 <%= div_for punch, :class => "#{punch.created_at > Time.now.beginning_of_day ? 'today' : ''}" do %>
-  <p><%= highlight(punch).html_safe %> <%= pluralize(punch.duration_in_minutes, 'minute') if punch.duration_in_minutes? %></p>
-  <div class="date">
-    <%= content_tag (:div, "Started working at #{punch.start_time.strftime('%B %d %Y - %Hh%Mm%S')}", :class => "start-time") if punch.start_time? %><br />
-    <%= punch.created_at.strftime("%a, %B %d, %Y") %>
-  </div>
+    <%= content_tag (:div, "Created at #{punch.created_at.strftime("%a, %B %d, %Y")}", :class => "date") %>
+  <p><%= highlight(punch).html_safe %> <%= content_tag(:span, pluralize(punch.duration_in_minutes, 'minute'), :class => "duration-time") if punch.duration_in_minutes? %></p>
+    <%= content_tag (:div, "Started working at #{punch.start_time.strftime('%Hh%Mm%S')}", :class => "start-time") if punch.start_time? %>
   <div class="punch_control">
     <%= link_to "Start working", start_path(punch), :class => "start-link", :remote => true unless punch.start_time? %>
     <%= link_to "Stop working", stop_path(punch), :class => "stop-link", :remote => true if punch.start_time? %>
