--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -78,8 +78,10 @@ a img {
 .date {
 	font-style: italic;
 	color: #777;
-	text-align: right;
-	font-size: .9em;
+        float: right;
+	font-size: .7em;
+        margin: 5px 0;
+        line-height: 1.5em;
 }
 
 .punch {
@@ -99,10 +101,12 @@ a img {
 }
 
 .punch_control {
-	position: absolute;
-	padding: 2px 5px;
-	bottom: 0;
-	left: 0;
+
+}
+.start-time {
+        float: right;
+	color: #777;
+        font-size: .9em;
 }
 
 /*------------------------------------------Actions - Projects - Clients -----------------------------*/
